[Uploading FOODD Colab Notebook] initial FOODD EDA and preprocessing ideas. Also made minor edits to the other notebooks to explain purpose and which notebook to refer to for more information.

--- a/notebooks/230922_EDA_of_Nutrition5k_Ben.ipynb
+++ b/notebooks/230922_EDA_of_Nutrition5k_Ben.ipynb
@@ -8,7 +8,8 @@
     "# Initial EDA of Nutrition5k Image Data\n",
     "\n",
     "- Started Date: 9/22/2023\n",
-    "- By: Ben Fulroth"
+    "- By: Ben Fulroth\n",
+    "- Intended for running locally"
    ]
   },
   {
@@ -216,12 +217,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Note: Additional EDA on Nutrition5k data and the base CNN modeling was done in Nutrition5k_EDA_Base_Model.ipynb. Please refer to this notebook for additional EDA and methods."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "43ea10c50e125de1"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117f4b4e-ba96-4a27-8ede-44cfe21b0238",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1b75b0db6086f28f"
   }
  ],
  "metadata": {
