--- a/notebooks/Nutrition5k_EDA_Base_Model.ipynb
+++ b/notebooks/Nutrition5k_EDA_Base_Model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#Overview\n"
+    "# Overview\n"
    ],
    "metadata": {
     "id": "dknV8cuVM2_k"
@@ -49,6 +49,7 @@
     "*   Nurtiion5k paper had their data in a GCP bucket. They have a Google Bucket link [here](https://console.cloud.google.com/storage/browser/nutrition5k_dataset;tab=objects?prefix=&forceOnObjectsSortingFiltering=false)\n",
     "*   Bucket size total of 181 GB (includes photos and 360-degree surround food videos)\n",
     "*   Nutrition5k is a medium dataset (less than 2TB). It will not fit in RAM but maybe in local disk\n",
+    "*   Nutrition5k papers did not attempt to identify the food in the images unlike FOODD. Instead it tried to use images at various angles and later depth images.\n",
     "\n",
     "1) First we'll need to extract the unique ID for each dish image. We will also need the corresponding nutrition info of each food image. The following csv's contain all nutrition metadata at the dish_id-level, as well as per-ingredient mass and macronutrients. The default directory structure is:\n",
     "\n",
